@@ -92,6 +92,21 @@ class RegistrationToolTests(RequestTest):
 
         self.failUnless( result is None )
 
+    def test_testPropertiesValidity_email_with_singlequote( self ):
+
+        # CMF Collector #401
+
+        tool = self._makeOne().__of__( self.root )
+        self.root.portal_membership = FauxMembershipTool()
+
+        props = { 'email' : "user'site@example.com"
+                , 'username' : 'username'
+                }
+
+        result = tool.testPropertiesValidity( props, None )
+
+        self.failUnless( result is None )
+
     def test_testPropertiesValidity_new_invalid_email( self ):
 
         tool = self._makeOne().__of__( self.root )
