@@ -2,6 +2,10 @@ After CMF 1.5.5
 
   Bug Fixes
 
+    - CMFDefault.RegistrationTool: Adding single quotes to the allowed
+      characters in the local part of an email address.
+      (http://www.zope.org/Collectors/CMF/401)
+
     - CMFCore.FSPythonScript: FSPythonScripts forgot to add __file__ to
       the script globals. This broke warnings.warn() when a stacklevel
       argument pointing into the script was passed (2).
